[tool.poetry]
authors = ["Darkflame72 <leon@bowie-co.nz>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Framework :: AsyncIO",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "Asyncpixel"
documentation = "https://asyncpixel.readthedocs.io"
homepage = "https://github.com/Darkflame72/asyncpixel"
license = "GPLv3"
name = "asyncpixel"
readme = "README.md"
repository = "https://github.com/Darkflame72/asyncpixel"
version = "1.3.2"

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
importlib_metadata = {version = ">=2,<5", python = "<3.8"}
pydantic = "^1.7.3"
python = "^3.7"

[tool.poetry.dev-dependencies]
Pygments = "^2.11.2"
aioresponses = "^0.7.3"
black = "^22.3"
coverage = {extras = ["toml"], version = "^6.3"}
darglint = "^1.8.1"
flake8 = "^3.9.2"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-rst-docstrings = "^0.2.5"
mypy = "^0.942"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
pep8-naming = "^0.12.0"
pre-commit = "^2.18.1"
pre-commit-hooks = "^4.2.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
recommonmark = "^0.7.1"
reorder-python-imports = "^3.0.1"
safety = "^1.10.3"
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.18.1"
typeguard = "^2.13.3"
furo = "^2022.4.7"
sphinx-copybutton = "^0.5.0"
sphinxext-opengraph = "^0.6.3"
sphinxcontrib-trio = "^1.1.2"

[tool.coverage.paths]
source = ["asyncpixel"]

[tool.coverage.run]
branch = true
source = ["asyncpixel"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
