[tool.poetry]
authors = ["Darkflame72 <leon@bowie-co.nz>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Framework :: AsyncIO",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "Asyncpixel"
documentation = "https://asyncpixel.readthedocs.io"
homepage = "https://github.com/Darkflame72/asyncpixel"
license = "GPLv3"
name = "asyncpixel"
readme = "README.md"
repository = "https://github.com/Darkflame72/asyncpixel"
version = "1.4.0"

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
pydantic = "^1.7.3"
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.12.0"
aioresponses = "^0.7.3"
coverage = {extras = ["toml"], version = "^7.0"}
mypy = "^0.991"
nox = "^2022.1.7"
nox-poetry = "^1.0.1"
pep8-naming = "^0.13.0"
pre-commit = "^3.0.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
reorder-python-imports = "^3.1.0"
safety = "^2.0.0"
typeguard = "^2.13.3"

[tool.poetry.group.style.dependencies]
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.0.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-rst-docstrings = "^0.3.0"
black = "^22.8.0"
darglint = "^1.8.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2022.6.21"
sphinx-copybutton = "^0.5.0"
sphinxext-opengraph = "^0.7.0"
sphinxcontrib-trio = "^1.1.2"
sphinx = "^6.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.18.3"
recommonmark = "^0.7.1"


[tool.coverage.paths]
source = ["asyncpixel"]

[tool.coverage.run]
branch = true
source = ["asyncpixel"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[pytest]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = 'aioresponses.*'
ignore_missing_imports = true
